--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 		</style>
 	</head>
 	<body>
-		<script type="module" src="/main.js"></script>
+	  <script type="module" src="/main.js"></script>
+	  <div id="winScreen" style="display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: rgba(0, 0, 0, 0.8); color: white; padding: 20px; border-radius: 10px; text-align: center;">
+	    <h1>You Win!</h1>
+	    <button onclick="restartGame()">Play Again</button>
+</div>
+
 	</body>
 </html>
